--- a/Linux/tmux.conf
+++ b/Linux/tmux.conf
@@ -2,6 +2,12 @@ bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -c "#{pane_current_path}"
 
+# 绑定快捷键为r
+bind r source-file ~/.tmux.conf \; display-message "Config reloaded.."
+bind-key s setw synchronize-panes
+
+set-option -g mouse on # 开启鼠标支持
+
 # 绑定hjkl键为面板切换的上下左右键
 bind -r k select-pane -U # 绑定k为↑
 bind -r j select-pane -D # 绑定j为↓
