--- a/Linux/tmux.conf
+++ b/Linux/tmux.conf
@@ -2,6 +2,12 @@ bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -c "#{pane_current_path}"
 
+# 修改前缀指令
+set -g prefix C-e
+unbind C-b # C-b即Ctrl+b键，unbind意味着解除绑定
+bind C-e send-prefix # 绑定Ctrl+e为新的指令前缀
+set-option -g prefix2 ` # 设置一个不常用的`键作为指令前缀，按键更快些
+
 # 绑定快捷键为r
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded.."
 bind-key s setw synchronize-panes
